# aurbrowser

./: Cargo.toml  LICENSE  README.md
desktop/: aurbrowser.desktop  setup.md
src/: aur_client.rs  installer.rs  main.rs  package_checker.rs
src/ui/: mod.rs  package_list.rs  search.rs  window.rs
