[package]
name = "aurlooker"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.10"
libadwaita = "0.8"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
glib = "0.21"
gio = "0.21"
